<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white_FFFFFF"
    tools:context=".screen.settings.SettingsFragment">

  <com.github.korlex.meteor.view.Toolbar
      android:id="@+id/toolbar"
      android:layout_width="match_parent"
      android:layout_height="56dp"
      app:titleText="@string/settings"
      app:navBtn="@drawable/ic_back"/>

  <FrameLayout
      android:id="@+id/btnLocation"
      android:layout_width="match_parent"
      android:layout_height="48dp"
      android:layout_marginTop="8dp"
      android:background="?selectableItemBackground"
      android:paddingLeft="16dp"
      android:paddingRight="16dp">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:tint="?attr/colorPrimaryDark"
        app:srcCompat="@drawable/ic_loc"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginStart="40dp"
        android:text="@string/location"
        android:textColor="@color/gray_4d4d4d"
        android:textSize="16sp"/>

  </FrameLayout>

  <FrameLayout
      android:id="@+id/btnMeasurement"
      android:layout_width="match_parent"
      android:layout_height="48dp"
      android:background="?selectableItemBackground"
      android:paddingLeft="16dp"
      android:paddingRight="16dp">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:tint="?attr/colorPrimaryDark"
        app:srcCompat="@drawable/ic_ruler"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginStart="40dp"
        android:text="@string/measurement_units"
        android:textColor="@color/gray_4d4d4d"
        android:textSize="16sp"/>

  </FrameLayout>

  <FrameLayout
      android:id="@+id/btnColor"
      android:layout_width="match_parent"
      android:layout_height="48dp"
      android:background="?selectableItemBackground"
      android:paddingLeft="16dp"
      android:paddingRight="16dp">

    <ImageView
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_gravity="center_vertical"
        android:padding="2dp"
        android:tint="?attr/colorPrimaryDark"
        app:srcCompat="@drawable/shape_circle"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginStart="40dp"
        android:text="@string/color_scheme"
        android:textColor="@color/gray_4d4d4d"
        android:textSize="16sp"/>

  </FrameLayout>

  <FrameLayout
      android:id="@+id/btnAbout"
      android:layout_width="match_parent"
      android:layout_height="48dp"
      android:background="?selectableItemBackground"
      android:paddingLeft="16dp"
      android:paddingRight="16dp">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:tint="?attr/colorPrimaryDark"
        app:srcCompat="@drawable/ic_info"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginStart="40dp"
        android:text="@string/about"
        android:textColor="@color/gray_4d4d4d"
        android:textSize="16sp"/>

  </FrameLayout>

</LinearLayout>